[metadata]
name = pyroomasync-beta
version = 0.0.1
author = Eric Grinstein
author_email = e.grinstein@imperial.ac.uk
description = Simulate asyncronous microphone array recordings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/egrinstein/pyroomasync
project_urls =
    Bug Tracker = https://github.com/egrinstein/pyroomasync/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyroomasync
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src